--- a/my-first-pipeline/Jenkinsfile
+++ b/my-first-pipeline/Jenkinsfile
@@ -6,7 +6,7 @@ pipeline {
     stage('Test') {
       steps {
         sh 'node --version'
-        sh 'cat /etc/os-* >> /home/ubuntu/system.txt'
+        sh 'cat /etc/os-*' 
       }
     }
   }
